--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: aqua;
 }
 
 .App-logo {
@@ -21,6 +22,7 @@
 
 .App-link {
   color: #61dafb;
+  
 }
 
 .card {
