--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,22 @@
   }
 }
 body{
-  background:url("https://cdn.pixabay.com/photo/2017/07/25/11/44/crumpled-2537807_1280.jpg")
-  
+  background:url("https://cdn.pixabay.com/photo/2017/07/25/11/44/crumpled-2537807_1280.jpg");
+  height: 1000px;
+  background-size: cover;
+  background-position: center;
 }
-
+.button:hover{
+  background-color: rgb(3, 3, 3); 
+  border: none;
+  color: rgb(214, 236, 9);
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  -webkit-transition-duration: 1s; 
+  transition-duration: 1s;
+  cursor: pointer;
+}
